--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -11,7 +11,9 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/own_style_sed.css"/>
+    <link href="{{ asset('css/own_style_sed.css') }}" type="text/css" rel="stylesheet" />
+    <link href="{{ asset('css/styles.css') }}" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 
     <!-- Font Awesome JS -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
@@ -32,11 +34,17 @@
                 <li class="active">
                     <a href={{ path('landing') }}>Accueil</a>
                 <li>
-                <li>
+                {#<li>
                     <a href={{ path('carte') }}>Carte interactive</a>
                 </li>
                 <li class="active">
                     <a href="#" aria-disabled="true">Invitation Raid</a>
+                </li>#}
+                <li class="active">
+                    <a href={{ path('inviter') }}>Inviter bénévole</a>
+                </li>
+                <li class="active">
+                    <a href={{ path('gestion_raid') }}>Gérer mes Raids</a>
                 </li>
 
                <!-- <li>
