--- a/app/Resources/views/parcours/new.html.twig
+++ b/app/Resources/views/parcours/new.html.twig
@@ -27,7 +27,7 @@
 
                 <div class="form-row mb-4">
                     <div class="col">
-                        <button class="btn btn-info my-4 btn-block" type="submit">Créer un compte</button>
+                        <button class="btn btn-info my-4 btn-block" type="submit">Créer un parcours</button>
                     </div>
                     <div class="col">
                         <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
