--- a/app/Resources/views/raid/description_raid_organisateur.html.twig
+++ b/app/Resources/views/raid/description_raid_organisateur.html.twig
@@ -2,16 +2,16 @@
 
 {% block content %}
 <div class="container">
-    <ul class="list-group">
+   
         <button type="button" class="btn btn-primary btn-lg btn-block">Parcours</button>
 
         <ul class="list-group">
-        {% for parcours in all_parcours %}
-            <li class="list-group-item text-left">
-                {{parcours.nom}}
-            </li>
+        {% for parcours in all_parcours %} 
+            <a href= {{ path('edition_parcours', {'id':parcours.id} ) }}>
+                <li class="list-group-item">{{parcours.nom}}</li>
+            </a>
         {% endfor %}
-        </ul>
+        
 
         <a href= {{ path('create_parcours',{'id':raid.id}) }}>
           <i class="fas fa-3x fa-plus-circle"></i>
