--- a/app/Resources/views/raid/edit.html.twig
+++ b/app/Resources/views/raid/edit.html.twig
@@ -1,21 +1,73 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>Raid edit</h1>
+{% block content %}
+<div class='vertical-center'>
+    <div class="container col col-md-4">
+            <div class="card default-color-dark ">
+                {{ form_start(edit_form, {'attr': {'class': 'center border border-light p-5'}}) }}
+                    <p class="h4 mb-4 text-center">Edition du Raid</p>
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(edit_form.nom, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
 
-    <ul>
-        <li>
-            <a href="{{ path('raid_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(edit_form.lieu, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(edit_form.date, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+
+
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(edit_form.edition, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+
+                   {# <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(edit_form.nbrSport, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(edit_form.typeSport, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(edit_form.typeSurface, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div> #}
+
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(edit_form.equipe, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            <button class="btn btn-info my-4 btn-block" type="submit">Editer le raid</button>
+                        </div>
+                        <div class="col">
+                            {#<button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>#}
+                                   <button class="btn btn-info my-4 btn-block">             <a href={{ path('gestion_raid') }}>Retour</a>  </button>
+
+                        </div>
+                    </div>
+                {{ form_end(edit_form) }}
+          </div>
+    </div>
+</div>
 {% endblock %}
