--- a/app/Resources/views/parcours/new.html.twig
+++ b/app/Resources/views/parcours/new.html.twig
@@ -21,13 +21,12 @@
 
                 <div class="form-row mb-4">
                     <div class="col">
-                        <button class="btn btn-info my-4 btn-block" type="submit">Valider la création</button>
-                    </div>
-                    <div class="col">
                         <button class="btn btn-info my-4 btn-block" type="submit">Créer un parcours</button>
                     </div>
                     <div class="col">
-                        <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
+                        <a href={{ path('landing') }}>
+                            <button class="btn btn-info my-4 btn-block" >Annuler</button>
+                        </a>
                     </div>
                 </div>
             {{ form_end(form) }}
