gestionPosteBenevole__RejoindreBenevole__editRaid

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -38,6 +38,17 @@
                 <li class="active">
                     <a href="#" aria-disabled="true">Invitation Raid</a>
                 </li>
+                <li class="active">
+                    <a href={{ path('inviter') }}>Inviter bénévole</a>
+                </li>
+                <li class="active">
+                    <a href={{ path('gestion_raid') }}>Gérer mes Raids</a>
+                </li>
+
+                <li class="active">
+                    <a href={{ path('admin_benevole') }}>Administrer les bénévoles</a>
+                </li>
+
 
                <!-- <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
