--- a/app/Resources/views/raid/edit.html.twig
+++ b/app/Resources/views/raid/edit.html.twig
@@ -58,12 +58,10 @@
 
                     <div class="form-row mb-4">
                         <div class="col">
-                            <button class="btn btn-info my-4 btn-block" type="submit">Editer le raid</button>
+                            <button class="btn btn-info my-4 btn-block" type="submit">Créer un raid</button>
                         </div>
                         <div class="col">
-                            {#<button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>#}
-                                   <button class="btn btn-info my-4 btn-block">             <a href={{ path('gestion_raid') }}>Retour</a>  </button>
-
+                            <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
                         </div>
                     </div>
                 {{ form_end(edit_form) }}
