--- a/app/Resources/views/landing/inviter.html.twig
+++ b/app/Resources/views/landing/inviter.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-  <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant qu'organisateur {{user.name}}</button>
+  <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant qu'organisateur {{user.username}}</button>
   <br/>
 
   <ul class="list-group flexcolumn">
