--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -152,8 +152,8 @@ a.article, a.article:hover {
 #content {
     width: 100%;
     padding: 20px;
-    min-height: 100vh;
     transition: all 0.3s;
+    height:90vh;
 }
 
 #sidebarCollapse {
