refactor: raid join as benevole

--- a/app/Resources/views/auth/login.html.twig
+++ b/app/Resources/views/auth/login.html.twig
@@ -55,7 +55,7 @@
 
                  <!-- Register -->
                 <p>Pas encore inscrit?
-                    <a href="register">Rejoignez-nous</a>
+                    <a href={{ path('register') }}>Rejoignez-nous</a>
                 </p>
             </form>
         </div>
