--- a/app/Resources/views/landing/index.html.twig
+++ b/app/Resources/views/landing/index.html.twig
@@ -16,15 +16,13 @@
   {% else %}
     <p>Vous n'êtes organisateurs d'aucun RAID pour le moment.</p>
   {% endif %}
-    
+
     <a href= {{ path('create_raid') }}>
       <i class="fas fa-3x fa-plus-circle"></i>
     </a>
-  </ul> <br/>
+  </ul>
 
   <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant que bénévoles {{user.username}}</button>
-  <br/>
-
   <ul class="list-group">
   {% if raids_benevoles != null %}
     {% for raid in raids_benevoles %}
@@ -37,34 +35,21 @@
   {% endif %}
   </ul>
 
-
-  <button type="button" class="btn btn-secondary btn-lg btn-block">Vous avez été choisi comme bénévole dans ses raids {{user.name}}</button>
-  <br/>
-
-  <ul class="list-group">
-    {% for raid in raids_benevoles_choisis %}
-    {#  <a href= {{ path('create_raid') }}> #}
-        <li class="list-group-item">{{raid.nom}}</li>
-      {# </a> #}
-  {% endfor %}
-  </ul><br/>
-
   <button type="button" class="btn btn-primary btn-lg btn-block">Tous les raids</button>
-
   <ul class="list-group flexcolumn">
-  {% if all_raids != null %}
-    {% for raid in all_raids %}
-      <li class="list-group-item text-left">
-        {{raid.nom}}
-      <a href= {{ path('rejoindre_raid_comme_benevole', {'id_raid': raid.id, 'id_user': user.id}) }}>
-        Rejoins-nous!
-        <span class="glyphicon glyphicon-plus"></span>
-      </a>
-    </li>
-  {% endfor %}
-  {% else %}
-    <p>Aucun RAID enregistré.</p>
-  {% endif %}
+    {% if all_raids != null %}
+      {% for raid in all_raids %}
+        <li class="list-group-item text-left">
+          {{raid.nom}}
+          <a href= {{ path('rejoindre_raid_comme_benevole', {'id_raid': raid.id}) }}>
+            Rejoins-nous!
+            <span class="glyphicon glyphicon-plus"></span>
+          </a>
+      </li>
+    {% endfor %}
+    {% else %}
+      <p>Aucun RAID enregistré.</p>
+    {% endif %}
   </ul>
 
 </div>
