--- a/app/Resources/views/landing/rejoindreRaid.html.twig
+++ b/app/Resources/views/landing/rejoindreRaid.html.twig
@@ -4,18 +4,14 @@
 <div class='vertical-center'>
     <div class="container col col-md-4">
         <div class="card default-color-dark ">
-            {{ form_start(form, {'attr': {'class': 'center border border-light p-5 '}}) }}
+            {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
                 <p class="h4 mb-2 text-center">Rejoindre un raid comme bénévole</p>
-
-
 
                 <div class="form-row mb-4">
                     <div class="col">
-                        {{ form_row(form.poste, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(form.idPoste, {'attr': {'class': 'form-control'}}) }}
                     </div>
                 </div>
-
-
 
                 <div class="form-row mb-4">
                     <div class="col">
